# Sagi

./: Makefile.am  configure.ac
src/: Makefile.am  aria.py  config.py  sagi.glade  sagi.py  sagi.ui
